--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.1",
     "autoprefixer": "10.4.15",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.2",
     "next": "13.4.19",
+    "nodemailer": "^6.9.5",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3"
   }
 }
